# open-notebook-bot

./: .gitignore  pyproject.toml
src/agent/: main.py
